# indexing-sandbox

./: .replit  README.md  main.py  poetry.lock.bkp  pyproject.toml  requirements.txt
bkp/static/: canonical-is-the-index.html  meta-redirect2.html  softly_crashing.html
bkp/templates/: index.html
static/: 1p-blocked.html  blocked.html  canonical-is-the-index.html  meta-redirect1.html  meta-redirect2.html  noindex.html  robots.txt  softly_crashing.html  test.html  the_five_hundred.html
static/js/: 1p-blocked.js
static/json/: products.json
static/meta-chain/: meta-chain01.html  meta-chain02.html  meta-chain03.html  meta-chain04.html  meta-chain05.html  meta-chain06.html  meta-chain07.html  meta-chain08.html  meta-chain09.html  meta-chain10.html  meta-chain11.html  meta-chain12.html  meta-chain13.html
templates/: 404.html  5xx-robots.html  bot_404.html  canonical-http.html  canonical-is-the-index.html  canonical-meta.html  index.html  index_base.html  noindex-http.html  not-index.html  product-card.html  softly_crashing.html  the_five_hundred.html
templates/redirect_hell/: meta-chain.html  redirect-chain.html  redirect2.html
templates/redirect_loop/: redirect-chain.html  redirect-hell-meta.html
templates/redirects/: meta-chain.html  redirect-end.html  redirect-loop-meta.html
templates/sitemaps/: sitemap.xml
tmp/1p-blocked/: robots.txt
tmp/3p-blocked/: products.json  robots.txt  script.js
tmp/cookie-blocked/: index.php
tmp/ip-blocked/: hostname.php  index.php  password.php  products.html  replit.nix  script.js
tmp/js-blocked/: index.html  script.js
(+17 files in other folders)
