[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Caio Barros <caio.barros@gmail.com>"]
description = ""
name = "flasktemplate"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^3.0.0"
python = "^3.8"
Flask-SocketIO = "^5.1.0"
simple-websocket = "^0.2.0"
[tool.poetry.dev-dependencies]
